[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "braille"
version = "0.1.2"
description = "A complete and extensible Unicode Braille processing library. Multilanguage version"
authors = [
    { name = "Nagao Yuji" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.6"

dependencies = [
    "braillebase>=0.1.2",
    "brailletable>=1.0.2",
    "braillebasejapanese>=0.1.2",
    "braillebaseportuguese>=0.1.2",
    "braillebasearabic>=0.1.2",
    "braillebaseenglish>=0.1.2"
]

keywords = ["braille", "unicode", "accessibility", "API", "binary", "blind", "education"]

[project.urls]
Homepage = "https://github.com/DukaCrazy/braille"
Documentation = "https://github.com/DukaCrazy/braille"
Source = "https://github.com/DukaCrazy/braille"
